--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ ServerEngine/obj/
 ServerEngine/bin/
 ClientEngine/obj/
 ClientEngine/bin/
-/TankiViewOpenPage/obj/Debug
+TankiViewOpenPage/obj/
+TankiViewOpenPage/bin/
